samples/_failures_safe/1761073269_51a05b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3260beb5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3260beb5.c:164:20: error: expected ‘)’ at end of input
  164 |     if (token_count
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_3260beb5.c:164:5: error: expected declaration or statement at end of input
  164 |     if (token_count
      |     ^~
